# Cat-Clone-Qt-Minimal

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/includes/: CMakeLists.txt
libs/includes/Core/: Cat.hpp  Flags.hpp
libs/src/: CMakeLists.txt
libs/src/Core/: Cat.cpp  Flags.cpp
